--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -35,7 +35,7 @@ contact ページ
 
         @include media(md){
             margin-bottom: 39px;
-            font-size: 15px
+            font-size: 16px
         }
     }
 
@@ -61,6 +61,10 @@ contact ページ
         @include media(md){
             font-size: 14px
         }
+    }
+
+    form{
+        width: 100%;
     }
 
     &__item{
