--- a/css/_header.scss
+++ b/css/_header.scss
@@ -40,8 +40,7 @@
             width: 148px;
 
             @include media(xl){
-                width: 125px;
-                padding-top: 5px;
+                width: 121px;
                 position: relative;
                 z-index: 99;
             }
@@ -106,13 +105,13 @@
     display: none;
     /*ボタンの位置*/
     position: fixed;
-    top: 20px;
-    right: 30px;
+    top: 17px;
+    right: 24px;
     z-index: 999;
     /*ボタンの形状*/
     cursor: pointer;
-    width: 34px;
-    height: 21px;
+    width: 32px;
+    height: 17px;
     transition: all 1s;
     
     span {
@@ -129,7 +128,7 @@
         }
         
         &:nth-of-type(2) {
-            top: 10px;
+            top: 8px;
         }
         
         &:nth-of-type(3) {
@@ -140,18 +139,20 @@
     
     @include media(xl){
         display: block;
-        top:16px
-    }// 1000pxを下回るとハンバーガーメニューにする
-    
+        top:18px;
+        right: 20px;
+    }// 1000pxを下回るとハンバーガーメニューにする  
 }
 
   // /*activeクラスが付与された後のボタンのアイコン設定*/
 .menu_btn::after {
     content: "MENU";
     position: absolute;
+    left: -1px;
+    bottom: -18px;
     font-size: 11px;
     font-family: variable.$ff-en;
-    bottom: -20px;
+    letter-spacing: 1.5;
 }
 
 .menu_btn.active::after {
@@ -159,11 +160,12 @@
     left: -2px;
     font-size: 11px;
     font-family: variable.$ff-en;
+    letter-spacing: 1.5;
 }
 
 .menu_btn.active {
     span:nth-of-type(1) {
-        transform: translateY(10px) rotate(45deg);
+        transform: translateY(8px) rotate(45deg);
     }
 
     span:nth-of-type(2) {
@@ -171,7 +173,7 @@
     }
 
     span:nth-of-type(3) {
-        transform: translateY(-9px) rotate(-45deg);
+        transform: translateY(-8px) rotate(-45deg);
     }
 }
 
@@ -217,6 +219,7 @@
     position: fixed;
     top: -120%;
     right: 0;
+
     display: block;
     text-align: center; 
 }
@@ -257,7 +260,7 @@
     .header__item-logo{
         // margin-top: 65px;
         opacity: 1;
-        margin-bottom: 30px;
+        margin-bottom: 40px;
         img{
             width: 96px;
         }
