--- a/css/_works.scss
+++ b/css/_works.scss
@@ -36,6 +36,7 @@ worksページ
         color: variable.$dusty-pink;
 
         @include media(md){
+            padding-left: 11%;
             font-size: 20px;
         }
 
@@ -173,13 +174,14 @@ worksページ
 
     .section__title{
         margin-bottom: 0;
-        padding-left: 12%;
+        padding-left: 8%;
         font-size: 33px;
         font-weight: bold;
         color: variable.$dusty-pink;
 
         @include media(md){
             font-size: 20px;
+            padding-left: 11%;
         }
 
         &::before{
@@ -306,12 +308,13 @@ worksページ
 
     .section__title{
         margin-bottom: 0;
-        padding-left: 12%;
+        padding-left: 8%;
         font-size: 33px;
         font-weight: bold;
         color: variable.$dusty-pink;
 
         @include media(md){
+            padding-left: 11%;
             font-size: 20px;
         }
 
@@ -640,14 +643,19 @@ works/下層ページ
     
             dt{
                 position: relative;
+                display: inline-block;
                 text-align: center;
                 width: 107px;
                 font-size: 15px;
                 padding: 3px 10px;
 
                 @include media(lg){
-                    width: 80px;
+                    width: 90px;
                 }   
+
+                @include media(md){
+                    width: 100px;
+                }    
 
                 &::before, &::after {
                     content:'';
@@ -671,9 +679,25 @@ works/下層ページ
                     right: 0;
                 }
 
-                @include media(md){
-                    width: 100px;
-                }      
+                .top{
+                    display: block;
+                    text-align: left;
+                    padding-left: 15px;
+
+                    @include media(lg){
+                        padding-left: 10px;
+                    }   
+                }
+
+                .bottom{
+                    display: block;
+                    text-align: left;
+                    padding-left: 15px;
+
+                    @include media(lg){
+                        padding-left: 10px;
+                    }  
+                }
             }
     
             dd{
@@ -790,6 +814,15 @@ works/下層ページ
         margin: 0 auto;
         padding-top: 102px;
         width: 71%;
+
+        @include media(md){
+            width: 40%;
+        } 
+
+        @include media(sm){
+            width: 60%;
+        } 
+
         img{
             width: 100%;
         }
