--- a/css/style.css
+++ b/css/style.css
@@ -939,10 +939,11 @@ body {
   padding-top: 70px;
   padding-bottom: 52px;
   opacity: 1;
+  visibility: visible;
   z-index: 3;
   background: rgba(255, 229, 213, 0.9);
   border-radius: 0px 0px 20px 20px;
-  transition: 0.7s;
+  transition: all 0.7s;
 }
 @media screen and (max-width: 1000px) {
   #header.done.panelactive .header__nav {
@@ -1288,6 +1289,7 @@ contact ページ
 @media screen and (max-width: 767px) {
   .inquire__item input {
     width: 94%;
+    font-size: 16px;
   }
 }
 .inquire__item input:focus {
@@ -1306,6 +1308,7 @@ contact ページ
 @media screen and (max-width: 767px) {
   .inquire textarea#comment {
     width: 90%;
+    font-size: 16px;
   }
 }
 .inquire textarea#comment:focus {
