--- a/css/_works.scss
+++ b/css/_works.scss
@@ -1,7 +1,6 @@
 @charset "utf-8";
 
 @use "variable";
-
 @use "btn";
 @use "mediaQuery" as *;
 /* ------------
@@ -47,7 +46,7 @@ worksページ
 
     &__slider{
         margin: 0 auto;
-        width: 90%;
+        width: 85%;
         display: flex;
         justify-content: center;
         gap: 69px;
@@ -101,9 +100,9 @@ worksページ
             transform: scale(1.1);/*拡大の値*/
             }
 
-        & p.caption{
+        .caption{
             position: absolute;
-            width: 80%;
+            margin: 0 auto;
             opacity:0;
             transition: .5s ease-in-out;/*移り変わる速さ*/
             z-index:3;/*テキストを前面に出す*/
@@ -113,12 +112,21 @@ worksページ
             color: variable.$text-color;
             line-height: 1.5;
 
-            & span.title{
+            .title{
+                display: block;
                 font-size: 18px;
                 border-bottom: 2px solid  variable.$dusty-pink;
-                padding-bottom: 3px;
+                padding-bottom: 1px;
             }
-            & span{
+
+            .subtitle{
+                display: block;
+                width: 100%;
+                margin: 0 auto;
+                margin-top: 10px;
+                font-size: 15px;
+            }
+            .text{
                 font-size: 15px;
                 line-height: 1.5;
             }
@@ -126,6 +134,7 @@ worksページ
 
         &:hover p.caption{
             opacity:1;
+            z-index: 5;
             }
         
     }
@@ -238,10 +247,11 @@ worksページ
             transform: scale(1.1);/*拡大の値*/
             }
 
-        & p.caption{
+        .caption{
             position: absolute;
-            width: 80%;
-            opacity:0;
+            width: 90%;
+            margin: 0 auto;
+            opacity: 0;
             transition: .5s ease-in-out;/*移り変わる速さ*/
             z-index:3;/*テキストを前面に出す*/
             top: 50%;
@@ -250,19 +260,28 @@ worksページ
             color: variable.$text-color;
             line-height: 1.5;
 
-            & span.title{
+            .title{
+                display: inline-block;
                 font-size: 18px;
                 border-bottom: 2px solid  variable.$dusty-pink;
-                padding-bottom: 3px;
+                padding-bottom: 1px;
             }
-            & span{
+
+            .subtitle{
+                display: block;
+                width: 100%;
+                margin: 0 auto;
+                margin-top: 10px;
                 font-size: 15px;
-                line-height: 1.5;
+            }
+            .text{
+                font-size: 15px;
             }
         }
 
         &:hover p.caption{
             opacity:1;
+            z-index: 5;
             }
     }
 
@@ -372,10 +391,11 @@ worksページ
             transform: scale(1.1);/*拡大の値*/
             }
 
-        & p.caption{
+        .caption{
             position: absolute;
-            width: 80%;
-            opacity:0;
+            width: 90%;
+            margin: 0 auto;
+            opacity: 0;
             transition: .5s ease-in-out;/*移り変わる速さ*/
             z-index:3;/*テキストを前面に出す*/
             top: 50%;
@@ -384,14 +404,22 @@ worksページ
             color: variable.$text-color;
             line-height: 1.5;
 
-            & span.title{
+            .title{
+                display: inline-block;
                 font-size: 18px;
                 border-bottom: 2px solid  variable.$dusty-pink;
-                padding-bottom: 3px;
+                padding-bottom: 1px;
             }
-            & span{
+
+            .subtitle{
+                display: block;
+                width: 100%;
+                margin: 0 auto;
+                margin-top: 10px;
                 font-size: 15px;
-                line-height: 1.5;
+            }
+            .text{
+                font-size: 15px;
             }
         }
 
@@ -552,8 +580,8 @@ works/下層ページ
 
     &__head{
         display: flex;
+        justify-content:space-between;        
         align-items: flex-start;
-        gap: 36px;
 
         @include media(md){
             display: block;
