--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ color
 
 /*worksと実績詳細ページの丸ボタンは中央に配置 */
 .graphic .btn-circle, .work .btn-circle {
-  margin-top: 130px;
+  margin-top: 140px;
   text-align: center;
   padding-right: 1px;
   justify-content: center;
@@ -142,7 +142,7 @@ color
 @media screen and (max-width: 767px) {
   .page__link .page__item a {
     width: 100%;
-    margin-bottom: 30px;
+    margin-bottom: 38px;
     font-size: 15px;
   }
 }
@@ -408,10 +408,6 @@ img {
 /* ------------
 全ページ共通のcss
 // ------------- */
-body {
-  display: none;
-}
-
 .spOnly {
   display: none;
 }
@@ -439,7 +435,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 20rem;
+  height: 23rem;
 }
 @media screen and (max-width: 1000px) {
   .mainvisual {
@@ -592,9 +588,10 @@ body {
   display: inline-block;
   width: 150px;
   height: 3px;
-  background: #FFE9D8;
   margin: 0;
+  border-radius: 10px;
   cursor: pointer;
+  background: #FFE9D8;
 }
 @media screen and (max-width: 870px) {
   .slick-dots li {
@@ -688,13 +685,13 @@ body {
 }
 
 .contact {
-  padding-top: 170px;
+  padding-top: 287px;
   padding-bottom: 132px;
   background: linear-gradient(0deg, rgb(255, 219, 196) 0%, rgba(255, 219, 196, 0) 100%);
 }
 @media screen and (max-width: 767px) {
   .contact {
-    padding-top: 200px;
+    padding-top: 300px;
   }
 }
 .contact__inner {
@@ -896,6 +893,8 @@ body {
 
 /*fadeDownクラスが付与された後のボタンの出現アニメーション設定*/
 .fadeDown {
+  margin-top: 10px;
+  margin-right: 5px;
   animation-name: fadeDownAnime;
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
@@ -913,6 +912,7 @@ body {
     transform: translateY(0);
   }
 }
+/*.doneクラスがついたヘッダー*/
 /*メニューボタンをクリックした際に付与されるpanelactiveクラスがついたら*/
 #header.done.panelactive {
   opacity: 1; /*不透明にして出現*/
@@ -943,7 +943,7 @@ body {
   z-index: 3;
   background: rgba(255, 229, 213, 0.9);
   border-radius: 0px 0px 20px 20px;
-  transition: all 0.7s;
+  transition: 0.7s;
 }
 @media screen and (max-width: 1000px) {
   #header.done.panelactive .header__nav {
@@ -1634,7 +1634,7 @@ worksページ
 }
 .website__slider {
   margin: 0 auto;
-  width: 90%;
+  width: 85%;
   display: flex;
   justify-content: center;
   gap: 69px;
@@ -1686,9 +1686,9 @@ worksページ
   border-radius: 10px;
   transform: scale(1.1); /*拡大の値*/
 }
-.website__img p.caption {
+.website__img .caption {
   position: absolute;
-  width: 80%;
+  margin: 0 auto;
   opacity: 0;
   transition: 0.5s ease-in-out; /*移り変わる速さ*/
   z-index: 3; /*テキストを前面に出す*/
@@ -1698,17 +1698,26 @@ worksページ
   color: #5E2F2A;
   line-height: 1.5;
 }
-.website__img p.caption span.title {
+.website__img .caption .title {
+  display: block;
   font-size: 18px;
   border-bottom: 2px solid #DAA180;
-  padding-bottom: 3px;
+  padding-bottom: 1px;
 }
-.website__img p.caption span {
+.website__img .caption .subtitle {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 10px;
+  font-size: 15px;
+}
+.website__img .caption .text {
   font-size: 15px;
   line-height: 1.5;
 }
 .website__img:hover p.caption {
   opacity: 1;
+  z-index: 5;
 }
 .website .website__img:hover .mask::before {
   content: "";
@@ -1809,9 +1818,10 @@ worksページ
   border-radius: 10px;
   transform: scale(1.1); /*拡大の値*/
 }
-.banner__img p.caption {
+.banner__img .caption {
   position: absolute;
-  width: 80%;
+  width: 90%;
+  margin: 0 auto;
   opacity: 0;
   transition: 0.5s ease-in-out; /*移り変わる速さ*/
   z-index: 3; /*テキストを前面に出す*/
@@ -1821,17 +1831,25 @@ worksページ
   color: #5E2F2A;
   line-height: 1.5;
 }
-.banner__img p.caption span.title {
+.banner__img .caption .title {
+  display: inline-block;
   font-size: 18px;
   border-bottom: 2px solid #DAA180;
-  padding-bottom: 3px;
+  padding-bottom: 1px;
 }
-.banner__img p.caption span {
+.banner__img .caption .subtitle {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 10px;
   font-size: 15px;
-  line-height: 1.5;
+}
+.banner__img .caption .text {
+  font-size: 15px;
 }
 .banner__img:hover p.caption {
   opacity: 1;
+  z-index: 5;
 }
 .banner .banner__img:hover .mask::before {
   content: "";
@@ -1932,9 +1950,10 @@ worksページ
   border-radius: 10px;
   transform: scale(1.1); /*拡大の値*/
 }
-.graphic__img p.caption {
+.graphic__img .caption {
   position: absolute;
-  width: 80%;
+  width: 90%;
+  margin: 0 auto;
   opacity: 0;
   transition: 0.5s ease-in-out; /*移り変わる速さ*/
   z-index: 3; /*テキストを前面に出す*/
@@ -1944,14 +1963,21 @@ worksページ
   color: #5E2F2A;
   line-height: 1.5;
 }
-.graphic__img p.caption span.title {
+.graphic__img .caption .title {
+  display: inline-block;
   font-size: 18px;
   border-bottom: 2px solid #DAA180;
-  padding-bottom: 3px;
+  padding-bottom: 1px;
 }
-.graphic__img p.caption span {
+.graphic__img .caption .subtitle {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 10px;
   font-size: 15px;
-  line-height: 1.5;
+}
+.graphic__img .caption .text {
+  font-size: 15px;
 }
 .graphic__img:hover p.caption {
   opacity: 1;
@@ -2111,8 +2137,8 @@ works/下層ページ
 }
 .work__head {
   display: flex;
+  justify-content: space-between;
   align-items: flex-start;
-  gap: 36px;
 }
 @media screen and (max-width: 767px) {
   .work__head {
@@ -2920,19 +2946,19 @@ messageページ
   font-family: "futura-pt", sans-serif;
   font-weight: 400;
   font-style: normal;
-  color: #DAA180;
+  color: #FFBE98;
 }
 .feature__number::before, .feature__number::after {
-  background-color: #DAA180; /* 横線の色 */
+  background-color: #FFBE98; /* 横線の色 */
   content: "";
-  height: 1px; /* 横線の高さ */
+  height: 2px; /* 横線の高さ */
   width: 8px; /* 横線の長さ */
 }
 .feature__number::before {
-  margin-right: 8px; /* 文字との余白 */
+  margin-right: 7px; /* 文字との余白 */
 }
 .feature__number::after {
-  margin-left: 8px; /* 文字との余白 */
+  margin-left: 7px; /* 文字との余白 */
 }
 .feature__title {
   font-size: 20px;
@@ -3016,9 +3042,10 @@ messageページ
 .introduction .section__title {
   display: inline-block;
   margin-left: 21px;
-  padding: 8px;
+  padding: 8px 8px 12px 8px;
   border-bottom: 4px dotted #FFBE98;
   font-size: 30px;
+  letter-spacing: 0.08em;
   font-weight: bold;
   color: #DAA180;
 }
@@ -3151,7 +3178,7 @@ messageページ
 }
 .history__title {
   margin-top: 40px;
-  margin-left: 45px;
+  margin-left: 30px;
   position: relative;
 }
 @media screen and (max-width: 767px) {
@@ -3421,8 +3448,8 @@ messageページ
   text-align: left;
   top: 0;
   width: 172px;
-  padding-top: 60px;
-  margin-left: 8%;
+  padding-top: 70px;
+  margin-left: 10%;
 }
 @media screen and (max-width: 1000px) {
   .fv__inner {
@@ -3470,6 +3497,7 @@ messageページ
 }
 .fv__sns img {
   margin-top: 14px;
+  margin-left: 9px;
   width: 100%;
 }
 
@@ -3504,12 +3532,10 @@ messageページ
   top: -120%;
   right: 0;
   z-index: -1;
-  /*高さと幅*/
   display: block;
   justify-content: center;
   align-items: center;
   text-align: center;
-  transition: 0.3s;
 }
 
 .fv__inner.done.panelactive .fv__nav {
@@ -3584,6 +3610,9 @@ messageページ
   .fv__inner.done.panelactive .fv__nav {
     display: block;
   }
+}
+.fv__inner.done.panelactive .fv__nav .fv__sns img {
+  margin-left: 0;
 }
 
 section {
@@ -3783,9 +3812,10 @@ works
   border-radius: 10px;
   transform: scale(1.1); /*拡大の値*/
 }
-.works__img p.caption {
+.works__img .caption {
   position: absolute;
   width: 80%;
+  margin: 0 auto;
   opacity: 0;
   transition: 0.5s ease-in-out; /*移り変わる速さ*/
   z-index: 3; /*テキストを前面に出す*/
@@ -3795,28 +3825,24 @@ works
   color: #5E2F2A;
   line-height: 1.5;
 }
-.works__img p.caption span.title {
+.works__img .caption .title {
+  display: inline-block;
   font-size: 18px;
   border-bottom: 2px solid #DAA180;
-  padding-bottom: 3px;
+  padding-bottom: 1px;
 }
-.works__img p.caption span {
+.works__img .caption .subtitle {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 10px;
   font-size: 15px;
-  line-height: 1.5;
 }
-.works__img:hover p.caption {
+.works__img .caption .text {
+  font-size: 15px;
+}
+.works__img:hover .caption {
   opacity: 1;
-}
-.works .works__img:hover .mask::before {
-  content: "";
-  position: absolute;
-  border-radius: 10px;
-  z-index: 2;
-  top: 10px;
-  left: 10px;
-  width: calc(100% - 20px);
-  height: calc(100% - 20px);
-  background: rgba(255, 255, 255, 0.7);
 }
 .works__category {
   display: flex;
