--- a/css/_btn.scss
+++ b/css/_btn.scss
@@ -276,6 +276,7 @@
     &:hover {
         border-radius: 10px;
         border: 1px solid variable.$peach-fuzz;
+            opacity: 1;
             // color: variable.$cream-beige;
             // background: rgb(255, 190, 152);
             // background: linear-gradient(90deg, rgba(255, 190, 152, 1) 0%, rgba(251, 222, 215, 1) 100%);
